--- a/calculator-app/style.css
+++ b/calculator-app/style.css
@@ -1,10 +1,65 @@
+/* DEFAULT STYLES */
+
+:root {
+	--system-ui-fonts: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
 html {
+	box-sizing: border-box;
+
+	font-family: var(--system-ui-fonts);
+	font-size: 62.5%;
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
 }
 
-body {
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
 	margin: 0;
+	padding: 0;
+	position: relative;
+}
+
+body {
+	font-family: inherit;
+	font-size: 1.6rem;
+}
+
+::selection,
+::-moz-selection {
+	background: #a00;
+
+	text-shadow: none;
+}
+
+hr {
+	display: block;
+	height: 0.1rem;
+	margin: 1.6rem 0;
+	padding: 0;
+
+	border: 0;
+	border-top: 0.1rem solid #ccc;
+}
+
+audio,
+canvas,
+iframe,
+img,
+svg,
+video {
+	vertical-align: middle;
+}
+
+fieldset {
+	border: 0;
+}
+
+textarea {
+	resize: vertical;
 }
 
 main {
@@ -12,9 +67,9 @@ main {
 }
 
 h1 {
-	margin: 0.67em 0;
+	margin: 1.064rem 0;
 
-	font-size: 2em;
+	font-size: 3.2rem;
 }
 
 hr {
@@ -26,7 +81,7 @@ hr {
 
 pre {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size: 1.6rem;
 }
 
 a {
@@ -49,7 +104,7 @@ code,
 kbd,
 samp {
 	font-family: monospace, monospace;
-	font-size: 1em;
+	font-size: 1.6rem;
 }
 
 small {
@@ -58,19 +113,18 @@ small {
 
 sub,
 sup {
-	position: relative;
-	vertical-align: baseline;
-
 	font-size: 75%;
 	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sub {
-	bottom: -0.25em;
+	bottom: -0.4rem;
 }
 
 sup {
-	top: -0.5em;
+	top: -0.8rem;
 }
 
 img {
@@ -119,11 +173,11 @@ button:-moz-focusring,
 [type='button']:-moz-focusring,
 [type='reset']:-moz-focusring,
 [type='submit']:-moz-focusring {
-	outline: 1px dotted ButtonText;
+	outline: 0.1rem dotted ButtonText;
 }
 
 fieldset {
-	padding: 0.35em 0.75em 0.625em;
+	padding: 0.56rem 1.2rem 1rem;
 }
 
 legend {
@@ -158,7 +212,7 @@ textarea {
 
 [type='search'] {
 	-webkit-appearance: textfield;
-	outline-offset: -2px;
+	outline-offset: -0.2rem;
 }
 
 [type='search']::-webkit-search-decoration {
@@ -186,57 +240,18 @@ template {
 	display: none;
 }
 
-html {
-	font-size: 62.5%;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	line-height: 1.4;
-}
-
-::selection {
-	background: #b3d4fc;
-
-	text-shadow: none;
-}
-
-hr {
-	display: block;
-	height: 1px;
-	margin: 1em 0;
-	padding: 0;
-
-	border: 0;
-	border-top: 1px solid #ccc;
-}
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-	vertical-align: middle;
-}
-
-fieldset {
-	border: 0;
-	margin: 0;
-	padding: 0;
-}
-
-textarea {
-	resize: vertical;
-}
+/* CUSTOM STYLES */
 
 :root {
+	--theme-black: #101010;
+	--theme-white: #fcfcfc;
+	--theme-grey: #d5d5d5;
+	--theme-red: #a00;
+
 	--button-height: 4.2rem;
 	--button-margin: 0.32rem;
 	--button-padding: 0.8rem;
 	--button-width: 4.2rem;
-
-	--theme-black: #232323;
-	--theme-white: #fffffa;
-	--theme-grey: #d5d5d5;
-	--theme-red: #a00;
 }
 
 body {
@@ -249,13 +264,10 @@ body {
 	background: var(--theme-grey);
 
 	color: var(--theme-black);
-
-	font-size: 1.6rem;
 }
 
 .calculator {
 	align-items: center;
-	box-shadow: 0 0 1.5rem 0.5rem #00000040;
 	display: flex;
 	flex-wrap: wrap;
 	height: 40rem;
@@ -265,7 +277,7 @@ body {
 
 	border-radius: 0.8rem;
 
-	background: transparent;
+	backdrop-filter: contrast(120%);
 
 	color: inherit;
 	text-align: center;
@@ -336,6 +348,8 @@ body {
 	font-size: 1.6rem;
 }
 
+/* MEDIA QUERIES (from here) */
+
 @media (hover: hover) and (pointer: fine) {
 	.calculator__button:hover {
 		background: var(--theme-white);
@@ -373,7 +387,7 @@ body {
 	}
 
 	.calculator {
-		box-shadow: 0 0 15px 5px #00000040;
+		backdrop-filter: contrast(125%);
 	}
 
 	@media (hover: hover) and (pointer: fine) {
@@ -414,7 +428,7 @@ body {
 	}
 
 	.calculator {
-		box-shadow: 0 0 15px 5px #00000080;
+		backdrop-filter: contrast(85%);
 	}
 
 	.calculator__display::placeholder {
@@ -502,21 +516,21 @@ body {
 
 @media (prefers-reduced-motion: reduce) {
 	* {
-		animation: none !important;
-		transition-duration: 0s !important;
-		transition-delay: 0s !important;
+		animation: none;
+		transition-duration: 0s;
+		transition-delay: 0s;
 	}
 }
 
-@media print,
-	(min-resolution: 1.25dppx),
-	(min-resolution: 120dpi),
-	(-webkit-min-device-pixel-ratio: 1.25) {
-}
+/* UTILITY CLASSES */
 
 .--hidden,
 [hidden] {
 	display: none !important;
+}
+
+.--invisible {
+	visibility: hidden;
 }
 
 .--partiallyHidden {
@@ -543,10 +557,6 @@ body {
 	width: auto;
 
 	white-space: inherit;
-}
-
-.--invisible {
-	visibility: hidden;
 }
 
 .--clearFix::before,
@@ -583,63 +593,4 @@ body {
 
 .targetClassName::-webkit-scrollbar {
 	display: none;
-}
-
-@media print {
-	*,
-	*::before,
-	*::after {
-		box-shadow: none !important;
-
-		background: #fff !important;
-
-		color: #000 !important;
-		text-shadow: none !important;
-	}
-}
-
-a,
-a:visited {
-	text-decoration: underline;
-}
-
-a[href]::after {
-	content: ' (' attr(href) ')';
-}
-
-abbr[title]::after {
-	content: ' (' attr(title) ')';
-}
-
-a[href^='#']::after,
-a[href^='javascript:']::after {
-	content: '';
-}
-
-pre {
-	white-space: pre-wrap !important;
-}
-
-pre,
-blockquote {
-	border: 1px solid #999;
-
-	page-break-inside: avoid;
-}
-
-tr,
-img {
-	page-break-inside: avoid;
-}
-
-p,
-h2,
-h3 {
-	orphans: 3;
-	widows: 3;
-}
-
-h2,
-h3 {
-	page-break-after: avoid;
 }
