--- a/color-app/style.css
+++ b/color-app/style.css
@@ -30,7 +30,7 @@ body {
 
 ::selection,
 ::-moz-selection {
-	background: #b3d4fc;
+	background: #a00;
 
 	text-shadow: none;
 }
@@ -253,7 +253,7 @@ template {
 
 	--theme-red: #a00;
 	--theme-red-opacity25: #aa000040;
-	--theme-red-opactiy50: #aa000080;
+	--theme-red-opacity50: #aa000080;
 
 	--box-shadow-opacity25: 0.16rem 0.8rem 0.8rem #00000040;
 	--box-shadow-opacity50: 0.16rem 0.8rem 0.8rem #00000080;
@@ -324,6 +324,10 @@ body {
 	transition: transform 0.32s, text-shadow 0.32s;
 }
 
+.userBox__outputValue::selection {
+	background: var(--theme-red-opacity50);
+}
+
 .userBox__outputValue::after {
 	bottom: auto;
 	left: 50%;
@@ -385,7 +389,7 @@ body {
 	white-space: nowrap;
 }
 
-/* Extends the .--partiallyHidden class to allow the element to be focusable when navigated to with a keyboard */
+/* Allow .--partiallyHidden elements to be focusable when navigated to with a keyboard */
 .--partiallyHidden.focusable:active,
 .--partiallyHidden.focusable:focus {
 	clip: auto;
@@ -396,16 +400,6 @@ body {
 	width: auto;
 
 	white-space: inherit;
-}
-
-.--clearFix::before,
-.--clearFix::after {
-	content: '';
-	display: table;
-}
-
-.--clearFix::after {
-	clear: both;
 }
 
 .--forcedUnselectable {
@@ -420,16 +414,6 @@ body {
 	-moz-user-select: all;
 	-ms-user-select: all;
 	user-select: all;
-}
-
-.--scrollbarHidden {
-	-ms-overflow-style: none;
-	overflow: auto;
-	scrollbar-width: none;
-}
-
-.targetClassName::-webkit-scrollbar {
-	display: none;
 }
 
 /* MEDIA QUERIES */
@@ -471,10 +455,6 @@ body {
 @media only screen and (min-width: 600px) {
 	html {
 		font-size: 10px;
-	}
-
-	.userBox__generatorButton {
-		font-weight: 400;
 	}
 }
 
